<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">起こしﾀﾛｳ</string>

    <string name="start_message">起こしタロウ</string>
    <string name="start">Start</string>
    <string name="action_settings">設定</string>
    <string name="action_store_alarm">登録</string>
    <string name="action_update_alarm">更新</string>
    <string name="action_delete_alarm">アラーム削除</string>
    <string name="stop_alarm">Stop!!</string>


    <string name="title_activity_alarm_list">アラーム一覧</string>
    <string name="title_activity_alarm_register">アラーム登録</string>
    <string name="title_activity_alarm_update">アラーム更新</string>
    <string name="title_activity_setting">設定</string>
    <string name="title_dialog_disabled_bluetooth">Bluetooth 無効</string>
    <string name="title_dialog_ble_searching">起こしタロウ 親機 検索中</string>
    <string name="title_dialog_ble_select">起こしタロウ 親機 選択</string>
    <string name="title_dialog_usated_device">起こしタロウ 親機 未設定</string>
    <string name="title_dialog_motion_waiting">起こしタロウ 親機 動作確認中</string>
    <string name="title_dialog_alarm_validation_failure">アラーム情報 確認</string>

    <string name="message_dialog_disabled_bluetooth">Bluetooth を有効にしてください。</string>
    <string name="message_dialog_ble_searching">起こしタロウ 親機を検索しています...</string>
    <string name="message_dialog_usated_device">起こしタロウ 親機との接続検証を先に行ってください。</string>
    <string name="message_dialog_motion_waiting">起こしタロウ 親機のセンサーを確認しています...</string>
    <string name="message_found_ble">起こしタロウ 親機 (%1$s) への接続に成功しました。</string>
    <string name="message_not_found_ble">起こしタロウ 親機が見つかりませんでした。</string>
    <string name="message_motion_failure">起こしタロウ 親機のセンサーを確認できませんでした。</string>
    <string name="message_motion_success">起こしタロウ 親機のセンサー検証に成功しました。</string>
    <string name="message_store_alarm">アラームを登録しました。</string>
    <string name="message_update_alarm">アラームを更新しました。</string>
    <string name="message_delete_alarm">アラームを削除しました。</string>
    <string name="message_notification">早く起きて!!</string>
    <string name="message_alarm">早く起きて!!\n親機まで急げ!!</string>
    <string name="message_alarm_stop_success">Good Morning!!</string>
    <string name="message_day_of_week_not_selected">アラームを鳴らす曜日を 1 つ以上選択してください。</string>
    <string name="message_alarm_changed_ignore">アラーム情報が変更されていますが、戻りますか?</string>

    <!-- On Development Message -->
    <string name="message_alarm_delete_all">アラーム情報を全て削除しました。</string>
    <string name="message_alarm_delete_none">削除するアラーム情報はありませんでした。</string>
    <string name="message_clear_device_name">保存済みのデバイス名を削除しました。</string>

    <string name="setting_connect">接続検証</string>

    <string name="log_prefix">TARO</string>

    <!-- alarm titles -->
    <string name="title_alarm_time">時間</string>
    <string name="title_alarm_day_of_week">曜日</string>
    <string name="title_alarm_ringtone">アラーム音</string>
    <string name="title_setting_try_connect">接続検証</string>
    <string name="title_setting_try_censor">センサー検証</string>
    <string name="title_setting_version">バージョン</string>

    <!-- alarm labels -->
    <string name="label_alarm_mon">月</string>
    <string name="label_alarm_tue">火</string>
    <string name="label_alarm_wed">水</string>
    <string name="label_alarm_thu">木</string>
    <string name="label_alarm_fri">金</string>
    <string name="label_alarm_sat">土</string>
    <string name="label_alarm_sun">日</string>
    <string name="label_alarm_none">なし</string>
    <string name="label_alarm_everyday">毎日</string>
    <string name="label_alarm_weekday">平日</string>
    <string name="label_alarm_weekend">週末</string>
    <string name="label_alarm_silent">サイレント</string>

    <string name="hello_world">Hello world!</string>
</resources>
