<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <!-- 疎通検証 -->
    <com.team7.wakeuptaroapp.views.preferences.SettingConnectionPreference
        android:key="tryConnect"
        android:title="@string/title_setting_try_connect"
        />

    <!-- センサー検証 -->
    <com.team7.wakeuptaroapp.views.preferences.SettingCensorPreference
        android:key="tryMotion"
        android:title="@string/title_setting_try_censor"
        />

    <!-- アラーム音量 -->
    <com.team7.wakeuptaroapp.views.preferences.SettingVolumePreference
        android:key="alarmVolume"
        android:title="@string/title_setting_alarm_volume"
        />

    <!-- アプリバージョン -->
    <com.team7.wakeuptaroapp.views.preferences.VersionPreference
        android:key="appVersion"
        android:title="@string/title_setting_version"
        />
</PreferenceScreen>
